update archive filename and use patch

--- a/dist.ini
+++ b/dist.ini
@@ -19,10 +19,12 @@ copyright_year   = 2014
 repo = file:inc
 name = otr
 pattern_prefix = libotr-
-pattern_version = ([\d\.]+)
+pattern_version = ([\w\.\-]+)
 pattern_suffix = \.tar\.gz
-pattern = libotr-([\d\.]+)\.tar\.gz
+pattern = libotr-([\w\.\-]+)\.tar\.gz
 
+build_command = patch -p1 < ../../inc/memleak.patch
+build_command = %p./bootstrap
 build_command = %pconfigure --with-pic --prefix=%s
 
 install_command = make install
