use configure.pl

--- a/dist.ini
+++ b/dist.ini
@@ -24,8 +24,7 @@ pattern_suffix = \.tar\.gz
 pattern = libotr-([\w\.\-]+)\.tar\.gz
 
 build_command = patch -p1 < ../../inc/memleak.patch
-build_command = %p./bootstrap
-build_command = %pconfigure --with-pic --prefix=%s
+build_command = %p../../inc/configure.pl --with-pic --prefix=%s
 
 install_command = make install
 
