--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ name    = Alien-OTR
 author  = Alex J. G. Burzyński <ajgb@cpan.org>
 license = Perl_5
 copyright_holder = Alex J. G. Burzyński <ajgb@cpan.org>
-copyright_year   = 2014
+copyright_year   = 2016
 
 [@Filter]
 -bundle=@AJGB
@@ -12,6 +12,7 @@ copyright_year   = 2014
 -remove=MakeMaker
 -remove=InstallGuide
 -remove=Test::Synopsis
+-remove=Test::Kwalitee
 
 [AutoPrereqs]
 
@@ -23,7 +24,6 @@ pattern_version = ([\w\.\-]+)
 pattern_suffix = \.tar\.gz
 pattern = libotr-([\w\.\-]+)\.tar\.gz
 
-build_command = patch -p1 < ../../inc/memleak.patch
 build_command = %p../../inc/configure.pl --with-pic --prefix=%s
 
 install_command = make install
